Small function preview fixes, ensuring empty text nodes are ignored when calculating function size. Fixes related to width. Function images now top align.

--- a/Website/Frontend/Config/VisualEditor/Styles/core.css
+++ b/Website/Frontend/Config/VisualEditor/Styles/core.css
@@ -95,6 +95,7 @@ img.compositeFunctionWysiwygRepresentation, img.compositeHtmlWysiwygRepresentati
     background-repeat:no-repeat; 
     background-size:68px 68px;
     background-image:url('../../../../Composite/images/loading.svg.ashx'); 
+    vertical-align: top;
 }
 
 img.compositeFunctionWysiwygRepresentation:-moz-loading, img.compositeHtmlWysiwygRepresentation:-moz-loading {
